--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 12px;
 }
+body #root {
+  height: 100vh;
+  width: 100vw;
+}
 
 button {
   border: none;
