--- a/src/index.scss
+++ b/src/index.scss
@@ -7,8 +7,14 @@
 body {
   font-family: 'Inter', sans-serif;
   font-size: 12px;
+
+  #root {
+    height: 100vh;
+    width: 100vw;
+  }
 }
 
 button {
   border: none;
 }
+
