--- a/src/layouts/layouts.css
+++ b/src/layouts/layouts.css
@@ -1,4 +1,4 @@
-.home-container {
+.centered-page-container {
   display: flex;
   width: 100%;
   height: 100%;
@@ -6,4 +6,4 @@
   justify-content: center;
 }
 
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=layouts.css.map */
