--- a/src/ui/buttons/button.scss
+++ b/src/ui/buttons/button.scss
@@ -29,6 +29,7 @@
     color: #3369F3;
     font-weight: 500;
     font-size: 11px;
+    text-decoration: none;
 
     &:hover {
       cursor: pointer;
