--- a/src/pages/chats/style.css
+++ b/src/pages/chats/style.css
@@ -1,3 +1,70 @@
+.chat {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.chat__side-panel {
+  width: 310px;
+  height: 100%;
+  max-height: 100%;
+  padding: 0 10px;
+  background: #FBFBFB;
+  border-right: 1px solid #EAEAEA;
+}
+.chat__side-panel .side-panel__header {
+  height: 90px;
+}
+.chat__side-panel .side-panel__header .header__profile {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  height: 50%;
+}
+.chat__side-panel .side-panel__header .header__profile a {
+  color: #999999;
+  font-weight: 500;
+}
+.chat__side-panel .side-panel__header .header__search {
+  height: 50%;
+  display: flex;
+  align-items: center;
+}
+.chat__side-panel .side-panel__header .header__search input {
+  width: 100%;
+  height: 32px;
+  border-radius: 5px;
+  border: none;
+  background: #EFEFEF;
+  padding: 10px;
+}
+.chat__side-panel .side-panel__header .header__search input::placeholder {
+  text-align: center;
+}
+.chat__side-panel .side-panel__list {
+  border-top: 1px solid #EAEAEA;
+  background: red;
+}
+.chat__window {
+  flex-grow: 1;
+  height: 100%;
+  max-height: 100%;
+}
 
+.user-item {
+  display: flex;
+  width: 100%;
+  height: 71px;
+  padding: 12px 0;
+  border-bottom: 1px solid #EAEAEA;
+}
+.user-item__avatar {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  background: #EFEFEF;
+}
+.user-item__message {
+  margin: 0 15px 10px;
+}
 
 /*# sourceMappingURL=style.css.map */
