--- a/src/pages/chats/style.css
+++ b/src/pages/chats/style.css
@@ -42,7 +42,6 @@
 }
 .chat__side-panel .side-panel__list {
   border-top: 1px solid #EAEAEA;
-  background: red;
 }
 .chat__window {
   flex-grow: 1;
@@ -56,6 +55,11 @@
   height: 71px;
   padding: 12px 0;
   border-bottom: 1px solid #EAEAEA;
+  cursor: pointer;
+  transition: background 200ms ease-in-out;
+}
+.user-item:hover {
+  background: #d9d9d9;
 }
 .user-item__avatar {
   width: 47px;
@@ -64,7 +68,36 @@
   background: #EFEFEF;
 }
 .user-item__message {
+  flex-grow: 1;
   margin: 0 15px 10px;
+}
+.user-item__message .message__author {
+  font-weight: 600;
+  font-size: 13px;
+  color: #1E1E1E;
+  margin-bottom: 4px;
+}
+.user-item__message .message__text {
+  font-weight: 500;
+  font-size: 12px;
+  color: #999999;
+  text-overflow: ellipsis;
+}
+.user-item__info .info__time {
+  font-weight: 500;
+  font-size: 9px;
+  color: #999999;
+  margin-bottom: 14px;
+}
+.user-item__info .info__count {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  width: 20px;
+  background: #3369F3;
+  color: #FFFFFF;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
