--- a/src/pages/chats/style.scss
+++ b/src/pages/chats/style.scss
@@ -49,7 +49,6 @@
 
     .side-panel__list {
       border-top: 1px solid #EAEAEA;
-      background: red;
     }
   }
 
@@ -66,6 +65,12 @@
   height: 71px;
   padding: 12px 0;
   border-bottom: 1px solid #EAEAEA;
+  cursor: pointer;
+  transition: background 200ms ease-in-out;
+
+  &:hover {
+    background: #d9d9d9;
+  }
 
   &__avatar {
     width: 47px;
@@ -75,10 +80,41 @@
   }
 
   &__message {
-    margin: 0 15px 10px
+    flex-grow: 1;
+    margin: 0 15px 10px;
+
+    .message__author {
+      font-weight: 600;
+      font-size: 13px;
+      color: #1E1E1E;
+      margin-bottom: 4px;
+    }
+
+    .message__text {
+      font-weight: 500;
+      font-size: 12px;
+      color: #999999;
+      text-overflow: ellipsis;
+    }
   }
 
   &__info {
+    .info__time {
+      font-weight: 500;
+      font-size: 9px;
+      color: #999999;
+      margin-bottom: 14px;
+    }
 
+    .info__count {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 20px;
+      width: 20px;
+      background: #3369F3;
+      color: #FFFFFF;
+      border-radius: 50%;
+    }
   }
 }
