feat: finish profile with edit profile

--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,27 @@ body #root {
   width: 100vw;
 }
 
-a {
+a, ul, li {
   text-decoration: none;
 }
 
 button {
   border: none;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 15px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=index.css.map */
