--- a/src/index.scss
+++ b/src/index.scss
@@ -14,11 +14,28 @@ body {
   }
 }
 
-a {
+a, ul, li {
   text-decoration: none;
 }
 
 button {
   border: none;
 }
+
+h1 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+
 
