--- a/src/ui/buttons/style.css
+++ b/src/ui/buttons/style.css
@@ -15,23 +15,41 @@
   background: #002da7;
 }
 
-.button-text-container {
+.button-text {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 100%;
   height: 37px;
-}
-.button-text-container .button-text {
-  background: #FFFFFF;
+  width: max-content;
   color: #3369F3;
   font-weight: 500;
   font-size: 11px;
   text-decoration: none;
 }
-.button-text-container .button-text:hover {
+.button-text:hover {
   cursor: pointer;
   color: #002da7;
+}
+.button-text[disabled=true] {
+  color: #999999;
+  pointer-events: none;
+}
+
+.colors__blue {
+  color: #3369F3;
+}
+.colors__red {
+  color: #FF0000;
+}
+.colors__red:hover {
+  color: #bb0303;
+}
+
+.fs__13 {
+  font-size: 13px;
+}
+
+.fw__500 {
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
