--- a/src/ui/buttons/style.scss
+++ b/src/ui/buttons/style.scss
@@ -16,24 +16,49 @@
   }
 }
 
-.button-text-container {
+.button-text {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 100%;
   height: 37px;
+  width: max-content;
+  color: #3369F3;
+  font-weight: 500;
+  font-size: 11px;
+  text-decoration: none;
 
+  &:hover {
+    cursor: pointer;
+    color: #002da7;
+  }
 
-  .button-text {
-    background: #FFFFFF;
+  &[disabled="true"] {
+    color: #999999;
+    pointer-events: none;
+  }
+}
+
+.colors {
+  &__blue {
     color: #3369F3;
-    font-weight: 500;
-    font-size: 11px;
-    text-decoration: none;
+  }
+
+  &__red {
+    color: #FF0000;
 
     &:hover {
-      cursor: pointer;
-      color: #002da7;
+      color: #bb0303;;
     }
+  }
+}
+
+.fs {
+  &__13 {
+    font-size: 13px;
+  }
+}
+
+.fw {
+  &__500 {
+    font-weight: 500;
   }
 }
