--- a/src/ui/buttons/style.css
+++ b/src/ui/buttons/style.css
@@ -38,10 +38,10 @@
   color: #3369F3;
 }
 .colors__red {
-  color: #FF0000;
+  color: #FF2F2F;
 }
 .colors__red:hover {
-  color: #bb0303;
+  color: #c9302c;
 }
 
 .fs__13 {
