--- a/src/pages/chats/style.scss
+++ b/src/pages/chats/style.scss
@@ -1,3 +1,5 @@
+@import "../../theme";
+
 .chat {
   display: flex;
   height: 100%;
@@ -8,8 +10,8 @@
     height: 100%;
     max-height: 100%;
     padding: 0 10px;
-    background: #FBFBFB;
-    border-right: 1px solid #EAEAEA;
+    background: themeColor('background', 'light');
+    border-right: 1px solid themeColor('divider');
 
     .side-panel__header {
       height: 90px;
@@ -21,7 +23,7 @@
         height: 50%;
 
         a {
-          color: #999999;
+          color: themeColor('text', 'light');
           font-weight: 500;
         }
       }
@@ -36,7 +38,7 @@
           height: 32px;
           border-radius: 5px;
           border: none;
-          background: #EFEFEF;
+          background: themeColor('background', 'dark');
           padding: 10px;
 
           &::placeholder {
@@ -48,7 +50,7 @@
     }
 
     .side-panel__list {
-      border-top: 1px solid #EAEAEA;
+      border-top: 1px solid themeColor('divider');
     }
   }
 
@@ -63,7 +65,7 @@
   width: 47px;
   height: 47px;
   border-radius: 50%;
-  background: #EFEFEF;
+  background: themeColor('background', 'dark');
 }
 
 .user-item {
@@ -71,12 +73,12 @@
   width: 100%;
   height: 71px;
   padding: 12px 0;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid themeColor('divider');
   cursor: pointer;
   transition: background 200ms ease-in-out;
 
   &:hover {
-    background: #d9d9d9;
+    background: themeColor('primary', 'light');
   }
 
   &__avatar { }
@@ -88,14 +90,14 @@
     .message__author {
       font-weight: 600;
       font-size: 13px;
-      color: #1E1E1E;
+      color: themeColor('text');
       margin-bottom: 4px;
     }
 
     .message__text {
       font-weight: 500;
       font-size: 12px;
-      color: #999999;
+      color: themeColor('text', 'light');
       text-overflow: ellipsis;
     }
   }
@@ -104,7 +106,7 @@
     .info__time {
       font-weight: 500;
       font-size: 9px;
-      color: #999999;
+      color: themeColor('text', 'light');
       margin-bottom: 14px;
     }
 
@@ -114,8 +116,8 @@
       justify-content: center;
       height: 20px;
       width: 20px;
-      background: #3369F3;
-      color: #FFFFFF;
+      background: themeColor('primary');
+      color: themeColor('white');
       border-radius: 50%;
     }
   }
@@ -132,7 +134,7 @@
     display: flex;
     align-items: center;
     height: 60px;
-    border-bottom: 1px solid #EAEAEA;
+    border-bottom: 1px solid themeColor('divider');
 
     .user-info__avatar {
       margin-right: 10px;
@@ -152,14 +154,14 @@
     display: flex;
     align-items: center;
     height: 60px;
-    border-top: 1px solid #EAEAEA;
+    border-top: 1px solid themeColor('divider');
 
     input {
       flex-grow: 1;
       height: 32px;
       border-radius: 30px;
       border: none;
-      background: #EFEFEF;
+      background: themeColor('background', 'dark');
       padding: 0 20px;
       margin-right: 10px;
 
@@ -173,13 +175,13 @@
       height: 32px;
       width: 32px;
       border-radius: 50%;
-      background: #3369F3;
-      color: #FFFFFF;
+      background: themeColor('primary');
+      color: themeColor('white');
       cursor: pointer;
       transition: background 200ms ease-in-out;
 
       &:hover {
-        background: #1E1E1E;
+        background: themeColor('text');
       }
     }
   }
