--- a/src/ui/form/style.scss
+++ b/src/ui/form/style.scss
@@ -1,9 +1,11 @@
+@import "../../theme";
+
 .form {
   display: flex;
   flex-direction: column;
   width: 340px;
   min-height: 360px;
-  background: #FFFFFF;
+  background: themeColor('white');
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
   border-radius: 12px;
   padding: 50px 30px 30px;
