fix: add mein tag and add name for inputs

--- a/src/pages/profile/style.scss
+++ b/src/pages/profile/style.scss
@@ -25,6 +25,7 @@
     height: 130px;
     border-radius: 50%;
     background: themeColor('background', 'dark');
+    border: none;
     margin-bottom: 20px;
   }
 }
