--- a/src/ui/buttons/style.css
+++ b/src/ui/buttons/style.css
@@ -18,7 +18,6 @@
 .button-text {
   display: flex;
   align-items: center;
-  height: 37px;
   width: max-content;
   color: #3369F3;
   font-weight: 500;
@@ -50,6 +49,13 @@
 
 .fw__500 {
   font-weight: 500;
+}
+
+.m__l-auto {
+  margin-left: auto;
+}
+.m__r-auto {
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
