feat: error code pages to Block

--- a/src/ui/buttons/style.css
+++ b/src/ui/buttons/style.css
@@ -23,6 +23,8 @@
   font-weight: 500;
   font-size: 11px;
   text-decoration: none;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .button-text:hover {
   cursor: pointer;
