--- a/src/ui/buttons/style.scss
+++ b/src/ui/buttons/style.scss
@@ -26,6 +26,8 @@
   font-weight: 500;
   font-size: 11px;
   text-decoration: none;
+  margin-top: 15px;
+  margin-bottom: 15px;
 
   &:hover {
     cursor: pointer;
