--- a/src/pages/chats/style.scss
+++ b/src/pages/chats/style.scss
@@ -7,6 +7,7 @@
 
   &__side-panel {
     width: 310px;
+    min-width: 250px;
     height: 100%;
     max-height: 100%;
     padding: 0 10px;
@@ -70,9 +71,10 @@
 
 .user-item {
   display: flex;
-  width: 100%;
   height: 71px;
-  padding: 12px 0;
+  min-width: 0;
+  margin: 0 -10px;
+  padding: 12px 10px;
   border-bottom: 1px solid themeColor('divider');
   cursor: pointer;
   transition: background 200ms ease-in-out;
