--- a/src/theme.scss
+++ b/src/theme.scss
@@ -6,6 +6,7 @@ $theme-colors: (
                 'main': #FF2F2F,
                 'light': #d9534f,
                 'dark': #c9302c, // hover state
+                'highlight': rgba(217, 83, 79, 0.2),
         ),
         'primary': (
                 'main': #3369F3,
