--- a/src/ui/buttons/style.css
+++ b/src/ui/buttons/style.css
@@ -14,6 +14,10 @@
   cursor: pointer;
   background: #002da7;
 }
+.button:disabled {
+  background: #999999;
+  cursor: default;
+}
 
 .button-text {
   display: flex;
